Enhance multi-touch.